tests/suite/fail/regression/fuzz/fuzz_garbage_75.ny
fn main() { let x = @75 } //~ ERROR
